<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="#ffffff"
    tools:context=".StartTestActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:textSize="19sp"
        android:text="@string/string_start_test" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_home"
        android:layout_alignBottom="@+id/button_home"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:text="@string/button_start2"
        android:onClick="startTest"
        />

    <Button
        android:id="@+id/button_home"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="17dp"
        android:text="@string/button_home"
        android:onClick="homeScreen"
        />

</RelativeLayout>