<!--
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/MyScheme1"
    tools:context=".MainActivity"
-->
<!-- android:layout_marginTop="30dp" -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true" >

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/greetingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:paddingTop="14dp" >

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="19sp"
                android:text="@string/dummy" />

        </LinearLayout>
        
        <LinearLayout android:id="@+id/footer"
					    android:layout_width="fill_parent"
					    android:layout_height="90dip"
					    android:background="@drawable/footer_repeat"
					    android:layout_alignParentBottom="true">
		</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greetingLayout"
            android:orientation="vertical"
            android:paddingBottom="14dp"
            android:padding="10dip"
            android:paddingTop="14dp" >
            
		        <Button
		            android:id="@+id/button_start"
		            style="@color/YellowGreen"
		            android:layout_width="fill_parent"
		            android:layout_height="52dp"
		            android:layout_gravity="center"
		            android:onClick="startTest"
		            android:text="@string/button_start"
		            />
		
		        <Button
		            android:id="@+id/button_results"
		            style="@color/MyScheme2"
		            android:layout_width="fill_parent"
		            android:layout_height="52dp"
		            android:layout_gravity="center"
		            android:layout_marginTop="18dp"
		            android:onClick="resultsPage"
		            android:text="@string/button_results"
		             />
		
		        <Button
		            android:id="@+id/button_about"
		            android:layout_width="fill_parent"
		            android:layout_height="52dp"
		            android:layout_gravity="center"
		            android:layout_marginTop="18dp"
		            android:onClick="showAbout"
		            android:text="@string/button_about"
		             />
		
		        <Button
		            android:id="@+id/button_exit"
		            android:layout_width="fill_parent"
		            android:layout_height="52dp"
		            android:layout_gravity="center"
		            android:layout_marginTop="18dp"
		            android:onClick="exitApp"
		            android:text="@string/button_exit_to_login"
		            />

        </LinearLayout>

        

        <ImageView
            android:id="@+id/changeMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/button_invisible"
            android:onClick="changeMode"
            android:src="@drawable/transparent" />
        


    </RelativeLayout>

</ScrollView><!-- </RelativeLayout> -->
