<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
 
        <!--  Header Starts-->
	        <LinearLayout android:id="@+id/header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/header_gradient"
			    android:paddingTop="5dip"
			    android:paddingBottom="5dip">
				<!-- Logo Start-->

		        <ImageView
		            android:layout_width="66dp"
		            android:layout_height="66dp"
		            android:layout_marginLeft="10dip"
		            android:contentDescription="@string/desc"
		            android:scaleType="fitStart"
		            android:src="@drawable/logo" />

		        <!-- Logo Ends -->

		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/header_string"
		            android:textColor="@color/YellowGreen"
		            android:textSize="20sp"
		            android:textStyle="bold|italic" />

			</LinearLayout>
        <!--  Header Ends -->
 
        <!-- Footer Start -->
                   <!-- Place footer next to header to set z-index property to minus value -->
                   <LinearLayout android:id="@+id/footer"
					    android:layout_width="fill_parent"
					    android:layout_height="90dip"
					    android:background="@drawable/footer_repeat"
					    android:layout_alignParentBottom="true">
					</LinearLayout>
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
	    
	          android:orientation="vertical"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:padding="10dip"
	          android:layout_below="@id/header">
	          

	          
	          <!-- Login button -->
	          <Button android:id="@+id/btnLastResult"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dip"
	                android:onClick="lastResult"
	                android:text="@string/button_last_result"/>

	          
	          <Button
	              android:id="@+id/btnResults"
	              android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:layout_marginTop="10dip"
	              android:onClick="lastResults"
	              android:text="@string/button_last_results" />
	 
		</LinearLayout>
        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>